noinst_LIBRARIES=libinternal.a

INCLUDES = -I$(top_srcdir) $(allegro_CFLAGS)

SRCS= \
	agup/agtk.c \
	agup/version \
	agup/awin95.h \
	agup/aphoton.h \
	agup/abeos.h \
	agup/aalg.c \
	agup/agtk.h \
	agup/abitmap.c \
	agup/ans.h \
	agup/awin95.c \
	agup/agupitrn.h \
	agup/aase.c \
	agup/agup.c \
	agup/aphoton.c \
	agup/aase.h \
	agup/abeos.c \
	agup/ans.c \
	agup/aalg.h \
	agup/agup.h


libinternal_a_SOURCES = $(SRCS)

EXTRA_DIST = \
allegro/include/alleggl.h \
allegro/include/allegro.h \
allegro/include/jpgalleg.h \
allegro/include/loadpng.h \
allegro/include/logg.h \
allegro/include/winalleg.h \
allegro/include/allegro/3d.h \
allegro/include/allegro/3dmaths.h \
allegro/include/allegro/alcompat.h \
allegro/include/allegro/alinline.h \
allegro/include/allegro/base.h \
allegro/include/allegro/color.h \
allegro/include/allegro/compiled.h \
allegro/include/allegro/config.h \
allegro/include/allegro/datafile.h \
allegro/include/allegro/debug.h \
allegro/include/allegro/digi.h \
allegro/include/allegro/draw.h \
allegro/include/allegro/file.h \
allegro/include/allegro/fix.h \
allegro/include/allegro/fixed.h \
allegro/include/allegro/fli.h \
allegro/include/allegro/fmaths.h \
allegro/include/allegro/font.h \
allegro/include/allegro/gfx.h \
allegro/include/allegro/graphics.h \
allegro/include/allegro/gui.h \
allegro/include/allegro/joystick.h \
allegro/include/allegro/keyboard.h \
allegro/include/allegro/lzss.h \
allegro/include/allegro/matrix.h \
allegro/include/allegro/midi.h \
allegro/include/allegro/mouse.h \
allegro/include/allegro/palette.h \
allegro/include/allegro/quat.h \
allegro/include/allegro/rle.h \
allegro/include/allegro/sound.h \
allegro/include/allegro/stream.h \
allegro/include/allegro/system.h \
allegro/include/allegro/text.h \
allegro/include/allegro/timer.h \
allegro/include/allegro/unicode.h \
allegro/include/allegro/inline/3dmaths.inl \
allegro/include/allegro/inline/asm.inl \
allegro/include/allegro/inline/color.inl \
allegro/include/allegro/inline/draw.inl \
allegro/include/allegro/inline/fix.inl \
allegro/include/allegro/inline/fmaths.inl \
allegro/include/allegro/inline/gfx.inl \
allegro/include/allegro/inline/matrix.inl \
allegro/include/allegro/inline/rle.inl \
allegro/include/allegro/inline/system.inl \
allegro/include/allegro/internal/aintern.h \
allegro/include/allegro/internal/aintvga.h \
allegro/include/allegro/internal/alconfig.h \
allegro/include/allegro/platform/aintbeos.h \
allegro/include/allegro/platform/aintdos.h \
allegro/include/allegro/platform/aintlnx.h \
allegro/include/allegro/platform/aintmac.h \
allegro/include/allegro/platform/aintosx.h \
allegro/include/allegro/platform/aintpsp.h \
allegro/include/allegro/platform/aintqnx.h \
allegro/include/allegro/platform/aintunix.h \
allegro/include/allegro/platform/aintwin.h \
allegro/include/allegro/platform/al386gcc.h \
allegro/include/allegro/platform/al386vc.h \
allegro/include/allegro/platform/al386wat.h \
allegro/include/allegro/platform/albcc32.h \
allegro/include/allegro/platform/albecfg.h \
allegro/include/allegro/platform/albeos.h \
allegro/include/allegro/platform/aldjgpp.h \
allegro/include/allegro/platform/aldmc.h \
allegro/include/allegro/platform/aldos.h \
allegro/include/allegro/platform/almac.h \
allegro/include/allegro/platform/almaccfg.h \
allegro/include/allegro/platform/almngw32.h \
allegro/include/allegro/platform/almsvc.h \
allegro/include/allegro/platform/alosx.h \
allegro/include/allegro/platform/alosxcfg.h \
allegro/include/allegro/platform/alplatf.h \
allegro/include/allegro/platform/alpsp.h \
allegro/include/allegro/platform/alpspcfg.h \
allegro/include/allegro/platform/alqnx.h \
allegro/include/allegro/platform/alqnxcfg.h \
allegro/include/allegro/platform/alucfg.h \
allegro/include/allegro/platform/alunix.h \
allegro/include/allegro/platform/alwatcom.h \
allegro/include/allegro/platform/alwin.h \
allegro/include/allegro/platform/astdint.h \
allegro/include/allegro/platform/macdef.h \
allegro/include/allegrogl/gl_ext.h \
allegro/include/allegrogl/gl_header_detect.h \
allegro/include/allegrogl/GLext/gl_ext_alias.h \
allegro/include/allegrogl/GLext/gl_ext_api.h \
allegro/include/allegrogl/GLext/gl_ext_defs.h \
allegro/include/allegrogl/GLext/gl_ext_list.h \
allegro/include/allegrogl/GLext/wgl_ext_alias.h \
allegro/include/allegrogl/GLext/wgl_ext_api.h \
allegro/include/allegrogl/GLext/wgl_ext_defs.h \
allegro/include/allegrogl/GLext/wgl_ext_list.h \
allegro/src/allegro.c \
allegro/src/blit.c \
allegro/src/bmp.c \
allegro/src/clip3d.c \
allegro/src/clip3df.c \
allegro/src/colblend.c \
allegro/src/color.c \
allegro/src/config.c \
allegro/src/datafile.c \
allegro/src/dataregi.c \
allegro/src/digmid.c \
allegro/src/dispsw.c \
allegro/src/dither.c \
allegro/src/drvlist.c \
allegro/src/file.c \
allegro/src/fli.c \
allegro/src/flood.c \
allegro/src/font.c \
allegro/src/fontbios.c \
allegro/src/fontbmp.c \
allegro/src/fontdat.c \
allegro/src/fontgrx.c \
allegro/src/fonttxt.c \
allegro/src/fsel.c \
allegro/src/gfx.c \
allegro/src/glyph.c \
allegro/src/graphics.c \
allegro/src/gsprite.c \
allegro/src/gui.c \
allegro/src/guiproc.c \
allegro/src/inline.c \
allegro/src/joystick.c \
allegro/src/keyboard.c \
allegro/src/lbm.c \
allegro/src/libc.c \
allegro/src/lzss.c \
allegro/src/math.c \
allegro/src/math3d.c \
allegro/src/midi.c \
allegro/src/mixer.c \
allegro/src/modesel.c \
allegro/src/mouse.c \
allegro/src/pcx.c \
allegro/src/poly3d.c \
allegro/src/polygon.c \
allegro/src/quantize.c \
allegro/src/quat.c \
allegro/src/readbmp.c \
allegro/src/readfont.c \
allegro/src/readsmp.c \
allegro/src/rle.c \
allegro/src/rotate.c \
allegro/src/rsfb.c \
allegro/src/scene3d.c \
allegro/src/sound.c \
allegro/src/spline.c \
allegro/src/stream.c \
allegro/src/text.c \
allegro/src/tga.c \
allegro/src/timer.c \
allegro/src/unicode.c \
allegro/src/vtable.c \
allegro/src/vtable15.c \
allegro/src/vtable16.c \
allegro/src/vtable24.c \
allegro/src/vtable32.c \
allegro/src/vtable8.c \
allegro/src/amd64/acpus.s \
allegro/src/amd64/asmdefs.inc \
allegro/src/beos/baccel.cpp \
allegro/src/beos/bdispsw.cpp \
allegro/src/beos/bdwindow.cpp \
allegro/src/beos/bgfx.c \
allegro/src/beos/bgfxapi.cpp \
allegro/src/beos/bgfxdrv.c \
allegro/src/beos/bjoy.c \
allegro/src/beos/bjoyapi.cpp \
allegro/src/beos/bjoydrv.c \
allegro/src/beos/bkey.c \
allegro/src/beos/bkeyapi.cpp \
allegro/src/beos/bkeydrv.c \
allegro/src/beos/bmidi.c \
allegro/src/beos/bmidiapi.cpp \
allegro/src/beos/bmididrv.c \
allegro/src/beos/bmousapi.cpp \
allegro/src/beos/bmousdrv.c \
allegro/src/beos/bmouse.c \
allegro/src/beos/boverlay.cpp \
allegro/src/beos/bsnd.c \
allegro/src/beos/bsndapi.cpp \
allegro/src/beos/bsnddrv.c \
allegro/src/beos/bswitch.s \
allegro/src/beos/bsysapi.cpp \
allegro/src/beos/bsysdrv.c \
allegro/src/beos/bsystem.c \
allegro/src/beos/btimeapi.cpp \
allegro/src/beos/btimedrv.c \
allegro/src/beos/btimer.c \
allegro/src/beos/bwindow.cpp \
allegro/src/beos/bwscreen.cpp \
allegro/src/c/cblit.h \
allegro/src/c/cblit16.c \
allegro/src/c/cblit24.c \
allegro/src/c/cblit32.c \
allegro/src/c/cblit8.c \
allegro/src/c/ccpu.c \
allegro/src/c/ccsprite.c \
allegro/src/c/cdefs15.h \
allegro/src/c/cdefs16.h \
allegro/src/c/cdefs24.h \
allegro/src/c/cdefs32.h \
allegro/src/c/cdefs8.h \
allegro/src/c/cgfx.h \
allegro/src/c/cgfx15.c \
allegro/src/c/cgfx16.c \
allegro/src/c/cgfx24.c \
allegro/src/c/cgfx32.c \
allegro/src/c/cgfx8.c \
allegro/src/c/cmisc.c \
allegro/src/c/cmiscs.s \
allegro/src/c/cscan.h \
allegro/src/c/cscan15.c \
allegro/src/c/cscan16.c \
allegro/src/c/cscan24.c \
allegro/src/c/cscan32.c \
allegro/src/c/cscan8.c \
allegro/src/c/cspr.h \
allegro/src/c/cspr15.c \
allegro/src/c/cspr16.c \
allegro/src/c/cspr24.c \
allegro/src/c/cspr32.c \
allegro/src/c/cspr8.c \
allegro/src/c/cstretch.c \
allegro/src/c/czscan.h \
allegro/src/c/czscan15.c \
allegro/src/c/czscan16.c \
allegro/src/c/czscan24.c \
allegro/src/c/czscan32.c \
allegro/src/c/czscan8.c \
allegro/src/dos/adlib.c \
allegro/src/dos/awedata.c \
allegro/src/dos/dfile.c \
allegro/src/dos/dgfxdrv.c \
allegro/src/dos/djirq.c \
allegro/src/dos/djirqs.s \
allegro/src/dos/djoydrv.c \
allegro/src/dos/dkeybd.c \
allegro/src/dos/dma.c \
allegro/src/dos/dmouse.c \
allegro/src/dos/dpmi.c \
allegro/src/dos/dsnddrv.c \
allegro/src/dos/dsystem.c \
allegro/src/dos/dtimer.c \
allegro/src/dos/emu8k.c \
allegro/src/dos/emu8k.h \
allegro/src/dos/emu8kmid.c \
allegro/src/dos/essaudio.c \
allegro/src/dos/gpro.c \
allegro/src/dos/grip.c \
allegro/src/dos/grip.h \
allegro/src/dos/gripfnc.s \
allegro/src/dos/gripjoy.c \
allegro/src/dos/ifsega.c \
allegro/src/dos/ifsega2f.c \
allegro/src/dos/ifsega2p.c \
allegro/src/dos/joystd.c \
allegro/src/dos/mpu.c \
allegro/src/dos/multijoy.c \
allegro/src/dos/n64pad.c \
allegro/src/dos/pic.c \
allegro/src/dos/psxpad.c \
allegro/src/dos/sb.c \
allegro/src/dos/sndscape.c \
allegro/src/dos/snespad.c \
allegro/src/dos/sw.c \
allegro/src/dos/swpp.c \
allegro/src/dos/swpps.s \
allegro/src/dos/vesa.c \
allegro/src/dos/vesas.s \
allegro/src/dos/wat.c \
allegro/src/dos/wss.c \
allegro/src/dos/ww.c \
allegro/src/i386/asmdef.c \
allegro/src/i386/asmdefs.inc \
allegro/src/i386/blit.inc \
allegro/src/i386/iblit16.s \
allegro/src/i386/iblit24.s \
allegro/src/i386/iblit32.s \
allegro/src/i386/iblit8.s \
allegro/src/i386/icpu.c \
allegro/src/i386/icpus.s \
allegro/src/i386/icsprite.c \
allegro/src/i386/igfx15.s \
allegro/src/i386/igfx16.s \
allegro/src/i386/igfx24.s \
allegro/src/i386/igfx32.s \
allegro/src/i386/igfx8.s \
allegro/src/i386/imisc.s \
allegro/src/i386/iscan.s \
allegro/src/i386/iscanmmx.s \
allegro/src/i386/ispr15.s \
allegro/src/i386/ispr16.s \
allegro/src/i386/ispr24.s \
allegro/src/i386/ispr32.s \
allegro/src/i386/ispr8.s \
allegro/src/i386/istretch.c \
allegro/src/i386/izbuf.s \
allegro/src/i386/opcodes.h \
allegro/src/i386/sprite.inc \
allegro/src/linux/fbcon.c \
allegro/src/linux/lasyncio.c \
allegro/src/linux/lconsole.c \
allegro/src/linux/lgfxdrv.c \
allegro/src/linux/ljoy.c \
allegro/src/linux/lkeybd.c \
allegro/src/linux/lmemory.c \
allegro/src/linux/lmouse.c \
allegro/src/linux/lmsedrv.c \
allegro/src/linux/lmseev.c \
allegro/src/linux/lmsegpmd.c \
allegro/src/linux/lmsems.c \
allegro/src/linux/lmseps2.c \
allegro/src/linux/lstddrv.c \
allegro/src/linux/lsystem.c \
allegro/src/linux/ltimer.c \
allegro/src/linux/lvga.c \
allegro/src/linux/lvgahelp.c \
allegro/src/linux/svgalib.c \
allegro/src/linux/svgalibs.s \
allegro/src/linux/tslib.c \
allegro/src/linux/vtswitch.c \
allegro/src/mac/allegro.r \
allegro/src/mac/madb.c \
allegro/src/mac/mdraw.c \
allegro/src/mac/mdrv.c \
allegro/src/mac/mfile.c \
allegro/src/mac/mkey.c \
allegro/src/mac/mlock.c \
allegro/src/mac/mmid.c \
allegro/src/mac/msbmp.c \
allegro/src/mac/msnd.c \
allegro/src/mac/msys.c \
allegro/src/macosx/cadigi.m \
allegro/src/macosx/camidi.m \
allegro/src/macosx/drivers.m \
allegro/src/macosx/hidjoy.m \
allegro/src/macosx/hidman.m \
allegro/src/macosx/keybd.m \
allegro/src/macosx/main.m \
allegro/src/macosx/pcpu.m \
allegro/src/macosx/qtmidi.m \
allegro/src/macosx/quartz.m \
allegro/src/macosx/qzfull.m \
allegro/src/macosx/qzmouse.m \
allegro/src/macosx/qzwindow.m \
allegro/src/macosx/soundman.m \
allegro/src/macosx/system.m \
allegro/src/misc/asmcapa.s \
allegro/src/misc/ccolconv.c \
allegro/src/misc/colconv.c \
allegro/src/misc/fm_drum.h \
allegro/src/misc/fm_emu.h \
allegro/src/misc/fm_instr.h \
allegro/src/misc/icolconv.s \
allegro/src/misc/modex.c \
allegro/src/misc/modexgfx.s \
allegro/src/misc/modexsms.c \
allegro/src/misc/modexsms.h \
allegro/src/misc/pckeys.c \
allegro/src/misc/runner.c \
allegro/src/misc/runnergw.c \
allegro/src/misc/test.cpp \
allegro/src/misc/vbeaf.c \
allegro/src/misc/vbeafex.c \
allegro/src/misc/vbeafs.s \
allegro/src/misc/vga.c \
allegro/src/misc/vgaregs.c \
allegro/src/ppc/pgfx8.inc \
allegro/src/ppc/ppccc15.inc \
allegro/src/ppc/ppccc8.inc \
allegro/src/ppc/ppcdef.inc \
allegro/src/ppc/ppcfr8.inc \
allegro/src/ppc/ppcgfx.s \
allegro/src/ppc/ppchl8.inc \
allegro/src/ppc/ppcpp8.inc \
allegro/src/ppc/ppcvl8.inc \
allegro/src/psp/pdrivers.c \
allegro/src/psp/pfile.c \
allegro/src/psp/pgfx.c \
allegro/src/psp/pjoy.c \
allegro/src/psp/pkey.c \
allegro/src/psp/pmain.c \
allegro/src/psp/pmouse.c \
allegro/src/psp/psound.c \
allegro/src/psp/psystem.c \
allegro/src/psp/ptimer.c \
allegro/src/psp/pvram.c \
allegro/src/psp/pvtable8.c \
allegro/src/qnx/qdrivers.c \
allegro/src/qnx/qkeydrv.c \
allegro/src/qnx/qmouse.c \
allegro/src/qnx/qphaccel.c \
allegro/src/qnx/qphbmp.c \
allegro/src/qnx/qphfull.c \
allegro/src/qnx/qphoton.c \
allegro/src/qnx/qphwin.c \
allegro/src/qnx/qswitch.s \
allegro/src/qnx/qsystem.c \
allegro/src/unix/alsa5.c \
allegro/src/unix/alsa9.c \
allegro/src/unix/alsamidi.c \
allegro/src/unix/arts.c \
allegro/src/unix/jack.c \
allegro/src/unix/sgial.c \
allegro/src/unix/udjgpp.c \
allegro/src/unix/udrvlist.c \
allegro/src/unix/udummy.c \
allegro/src/unix/uesd.c \
allegro/src/unix/ufile.c \
allegro/src/unix/ugfxdrv.c \
allegro/src/unix/ujoydrv.c \
allegro/src/unix/ukeybd.c \
allegro/src/unix/umain.c \
allegro/src/unix/umodules.c \
allegro/src/unix/umouse.c \
allegro/src/unix/uoss.c \
allegro/src/unix/uossmidi.c \
allegro/src/unix/uptimer.c \
allegro/src/unix/usigalrm.c \
allegro/src/unix/usnddrv.c \
allegro/src/unix/ustimer.c \
allegro/src/unix/usystem.c \
allegro/src/unix/uthreads.c \
allegro/src/unix/utimer.c \
allegro/src/win/asmlock.s \
allegro/src/win/dllver.rc \
allegro/src/win/gdi.c \
allegro/src/win/wddaccel.c \
allegro/src/win/wddbmp.c \
allegro/src/win/wddbmpl.c \
allegro/src/win/wddfull.c \
allegro/src/win/wddlock.c \
allegro/src/win/wddmode.c \
allegro/src/win/wddovl.c \
allegro/src/win/wddraw.c \
allegro/src/win/wddraw.h \
allegro/src/win/wddwin.c \
allegro/src/win/wdispsw.c \
allegro/src/win/wdsinput.c \
allegro/src/win/wdsndmix.c \
allegro/src/win/wdsound.c \
allegro/src/win/wdxver.c \
allegro/src/win/wfile.c \
allegro/src/win/wgdi.c \
allegro/src/win/wgfxdrv.c \
allegro/src/win/winput.c \
allegro/src/win/wjoydrv.c \
allegro/src/win/wjoydx.c \
allegro/src/win/wjoyhelp.c \
allegro/src/win/wjoyw32.c \
allegro/src/win/wkeybd.c \
allegro/src/win/wmidi.c \
allegro/src/win/wmouse.c \
allegro/src/win/wsnddrv.c \
allegro/src/win/wsndwo.c \
allegro/src/win/wsystem.c \
allegro/src/win/wthread.c \
allegro/src/win/wtimer.c \
allegro/src/win/wwnd.c \
allegro/src/x/icon.xpm \
allegro/src/x/xdga2.c \
allegro/src/x/xdga2s.s \
allegro/src/x/xgfxdrv.c \
allegro/src/x/xkeyboard.c \
allegro/src/x/xmouse.c \
allegro/src/x/xsystem.c \
allegro/src/x/xtimer.c \
allegro/src/x/xvtable.c \
allegro/src/x/xwin.c \
allegro/src/x/xwin.h \
allegro/src/x/xwins.s \
allegro/tools/dat.c \
allegro/tools/datedit.c \
allegro/tools/datedit.h \
allegro/tools/grabber.c \
allegro/tools/plugins.h \
allegro/tools/plugins/datalpha.c \
allegro/tools/plugins/datalpha.inc \
allegro/tools/plugins/datfli.c \
allegro/tools/plugins/datfli.inc \
allegro/tools/plugins/datfname.c \
allegro/tools/plugins/datfname.inc \
allegro/tools/plugins/datfont.c \
allegro/tools/plugins/datfont.inc \
allegro/tools/plugins/datgrab.c \
allegro/tools/plugins/datgrab.inc \
allegro/tools/plugins/datgrid.c \
allegro/tools/plugins/datgrid.inc \
allegro/tools/plugins/datimage.c \
allegro/tools/plugins/datimage.inc \
allegro/tools/plugins/datitype.c \
allegro/tools/plugins/datitype.inc \
allegro/tools/plugins/datmidi.c \
allegro/tools/plugins/datmidi.inc \
allegro/tools/plugins/datpal.c \
allegro/tools/plugins/datpal.inc \
allegro/tools/plugins/datsamp.c \
allegro/tools/plugins/datsamp.inc \
allegro/tools/plugins/datworms.c \
allegro/tools/plugins/datworms.inc \
allegro/tools/plugins/plugins.txt

