noinst_LIBRARIES=libships.a

INCLUDES = -I$(top_srcdir) $(allegro_CFLAGS)

SRCS= \
gen_ships.cpp \
shpaktgu.cpp \
shpalabc.cpp \
shpalckr.cpp \
shpalhdr.cpp \
shpandgu.cpp \
shpandgu.h \
shparisk.cpp \
shparisk.h \
shparitr.cpp \
shparkpi.cpp \
shpartem.cpp \
shpayrbs.cpp \
shpbahbu.cpp \
shpbatde.cpp \
shpbipka.cpp \
shpbogce.cpp \
shpbubex.cpp \
shpchebr.cpp \
shpchebr.h \
shpchmav.cpp \
shpchmav.h \
shpchmba.cpp \
shpchoex.cpp \
shpclapi.cpp \
shpclofl.cpp \
shpconca.cpp \
shpconho.cpp \
shpcrapl.cpp \
shpcrore.cpp \
shpdajem.cpp \
shpdakvi.cpp \
shpdeees.cpp \
shpdjila.cpp \
shpdooco.cpp \
shpdragr.cpp \
shpdruma.cpp \
shpdruma.h \
shpducla.cpp \
shpearc2.cpp \
shpearc3.cpp \
shpearcr.cpp \
shpearcr.h \
shpestgu.cpp \
shpexqen.cpp \
shpfiear.cpp \
shpfopsl.cpp \
shpforsh.cpp \
shpfweav.cpp \
shpgahmo.cpp \
shpgarty.cpp \
shpgerhe.cpp \
shpgeror.cpp \
shpglacr.cpp \
shpglads.cpp \
shpgluse.cpp \
shpharra.cpp \
shpherex.cpp \
shphubde.cpp \
shphydcr.cpp \
shpiceco.cpp \
shpilwav.cpp \
shpilwsp.cpp \
shpilwsp.h \
shpimpka.cpp \
shpjnkla.cpp \
shpjurcu.cpp \
shpjygst.cpp \
shpkahbo.cpp \
shpklidr.cpp \
shpkoaja.cpp \
shpkoapa.cpp \
shpkohma.cpp \
shpkohma.h \
shpkolfl.cpp \
shpkorsn.cpp \
shpktacr.cpp \
shpktesa.cpp \
shpkzedr.cpp \
shpkzedr.h \
shpleimu.cpp \
shplk_sa.cpp \
shplyrwa.cpp \
shpmekpi.cpp \
shpmeltr.cpp \
shpmmrxf.cpp \
shpmoisp.cpp \
shpmycpo.cpp \
shpmycpo.h \
shpnarlu.cpp \
shpneccr.cpp \
shpneodr.cpp \
shpnisha.cpp \
shpoliha.cpp \
shporzne.cpp \
shporzne.h \
shpostdi.cpp \
shpostor.cpp \
shpowavo.cpp \
shppanav.cpp \
shpphepa.cpp \
shppkufu.cpp \
shpplala.cpp \
shpplopl.cpp \
shpqlore.cpp \
shpquasi.cpp \
shpquawr.cpp \
shpraame.cpp \
shpradfi.cpp \
shprekas.cpp \
shprogsq.cpp \
shpsamat.cpp \
shpsclfr.cpp \
shpsefn2.cpp \
shpsefna.cpp \
shpshosc.cpp \
shpshosc.h \
shpslypr.cpp \
shpspael.cpp \
shpspael.h \
shpstaba.cpp \
shpstrsc.cpp \
shpsupbl.cpp \
shpsupbl.h \
shpsyrpe.cpp \
shpsyrpe.h \
shptauar.cpp \
shptaubo.cpp \
shptauda.cpp \
shptauem.cpp \
shptaufi.cpp \
shptaugl.cpp \
shptauhu.cpp \
shptaule.cpp \
shptaumc.cpp \
shptaume.cpp \
shptausl.cpp \
shptaust.cpp \
shptauto.cpp \
shptautu.cpp \
shptelno.cpp \
shpthrto.cpp \
shptougr.cpp \
shptrige.cpp \
shptulra.cpp \
shpulzin.cpp \
shpumgdr.cpp \
shpuosli.cpp \
shputwde.cpp \
shputwju.cpp \
shputwju.h \
shpuxjba.cpp \
shpvelcr.cpp \
shpvenke.cpp \
shpvezba.cpp \
shpvioge.cpp \
shpvirli.cpp \
shpvuvji.cpp \
shpvuxin.cpp \
shpvyrin.cpp \
shpxchex.cpp \
shpxilcr.cpp \
shpxxxas.cpp \
shpxxxma.cpp \
shpyehte.cpp \
shpyevme.cpp \
shpyurpa.cpp \
shpyusra.cpp \
shpzeksh.cpp \
shpzfpst.cpp \
shpzfpst.h

EXTRA_DIST = \
_howto_1.cpp \
_howto_2.cpp \
unused/shpastba.cpp \
unused/shpbubbo.cpp \
unused/shpcresu.cpp \
unused/shpdyzha.cpp \
unused/shpfresc.cpp \
unused/shpgerra.cpp \
unused/shphotsp.cpp \
unused/shpkabwe.cpp \
unused/shpkatpo.cpp \
unused/shpkorsi.cpp \
unused/shpmontr.cpp \
unused/shpplane.cpp \
unused/shpterbi.cpp \
unused/shpwassu.cpp \
unused/shpwistr.cpp \
unused/shpxaaar.cpp

libships_a_SOURCES = $(SRCS)

AM_CFLAGS = -I.. -DTWLIGHT_DATADIR=\""$(datadir)/tw-light"\" \
	-DTWLIGHT_DOCDIR=\""$(docdir)"\" \
	-DTWLIGHT_LIBDIR=\""$(libdir)"\" \
	-DTWLIGHT_LOCALEDIR=\""$(localedir)"\" \
	-DTWLIGHT_PREFIX=\""$(prefix)"\"

AM_CXXFLAGS = $(AM_CFLAGS)

